Add Mischel toothbrush slides; add Yarkoni generalizability slide; add power curve figure.

--- a/include/bib/open-sci.bib
+++ b/include/bib/open-sci.bib
@@ -1,4 +1,20 @@
 
+@ARTICLE{Yarkoni2020-se,
+  title    = "The generalizability crisis",
+  author   = "Yarkoni, Tal",
+  journal  = "The Behavioral and brain sciences",
+  pages    = "1--37",
+  month    =  dec,
+  year     =  2020,
+  url      = "http://dx.doi.org/10.1017/S0140525X20001685",
+  keywords = "generalization; inference; philosophy of science; psychology;
+              random effects; statistics",
+  language = "en",
+  issn     = "0140-525X, 1469-1825",
+  pmid     = "33342451",
+  doi      = "10.1017/S0140525X20001685"
+}
+
 @ARTICLE{Soska2021-mh,
   title     = "(Hyper)active data curation: A video case study from behavioral
                science",
