Add more to crises section; modify Qian et al. slides

--- a/include/bib/open-sci.bib
+++ b/include/bib/open-sci.bib
@@ -1,4 +1,77 @@
 
+@ARTICLE{Shaqiri2018-ys,
+  title     = "Sex-related differences in vision are heterogeneous",
+  author    = "Shaqiri, Albulena and Roinishvili, Maya and Grzeczkowski, Lukasz
+               and Chkonia, Eka and Pilz, Karin and Mohr, Christine and Brand,
+               Andreas and Kunchulia, Marina and Herzog, Michael H",
+  journal   = "Scientific reports",
+  publisher = "nature.com",
+  volume    =  8,
+  number    =  1,
+  pages     = "7521",
+  month     =  may,
+  year      =  2018,
+  url       = "http://dx.doi.org/10.1038/s41598-018-25298-8",
+  language  = "en",
+  issn      = "2045-2322",
+  pmid      = "29760400",
+  doi       = "10.1038/s41598-018-25298-8",
+  pmc       = "PMC5951855"
+}
+
+@ARTICLE{Qian2021-eu,
+  title    = "Children's perceptual sensitivity to optic flow-like visual
+              motion differs from adults",
+  author   = "Qian, Yiming and Seisler, Andrea R and Gilmore, Rick O",
+  journal  = "Developmental psychology",
+  volume   =  57,
+  number   =  11,
+  pages    = "1810--1821",
+  month    =  nov,
+  year     =  2021,
+  url      = "http://dx.doi.org/10.1037/dev0001227",
+  language = "en",
+  issn     = "0012-1649, 1939-0599",
+  pmid     = "34914447",
+  doi      = "10.1037/dev0001227"
+}
+
+@ARTICLE{Murray2018-vn,
+  title    = "Sex Differences in Visual Motion Processing",
+  author   = "Murray, Scott O and Schallmo, Michael-Paul and Kolodny, Tamar and
+              Millin, Rachel and Kale, Alex and Thomas, Philipp and Rammsayer,
+              Thomas H and Troche, Stefan J and Bernier, Raphael A and Tadin,
+              Duje",
+  journal  = "Current biology: CB",
+  month    =  aug,
+  year     =  2018,
+  url      = "http://dx.doi.org/10.1016/j.cub.2018.06.014",
+  keywords = "MT+; fMRI; motion perception; sex differences; visual perception",
+  language = "en",
+  issn     = "0960-9822, 1879-0445",
+  pmid     = "30122530",
+  doi      = "10.1016/j.cub.2018.06.014"
+}
+
+@ARTICLE{Abramov2012-da,
+  title     = "Sex \& vision I: Spatio-temporal resolution",
+  author    = "Abramov, Israel and Gordon, James and Feldman, Olga and
+               Chavarga, Alla",
+  journal   = "Biology of sex differences",
+  publisher = "bsd.biomedcentral.com",
+  volume    =  3,
+  number    =  1,
+  pages     = "20",
+  month     =  sep,
+  year      =  2012,
+  url       = "http://dx.doi.org/10.1186/2042-6410-3-20",
+  language  = "en",
+  issn      = "2042-6410",
+  pmid      = "22943466",
+  doi       = "10.1186/2042-6410-3-20",
+  pmc       = "PMC3447704"
+}
+
 @ARTICLE{Yarkoni2020-se,
   title    = "The generalizability crisis",
   author   = "Yarkoni, Tal",
