Footnote about sex vs. gender; square peg round hold giphy; bullet points & reference about data sharing; Capybara video.

--- a/include/bib/open-sci.bib
+++ b/include/bib/open-sci.bib
@@ -1,3 +1,40 @@
+@MISC{Watson2022-ox,
+  title        = "Many researchers say they'll share data --- but don't",
+  booktitle    = "Nature Publishing Group {UK}",
+  author       = "Watson, Clare",
+  month        =  jun,
+  year         =  2022,
+  url          = "http://dx.doi.org/10.1038/d41586-022-01692-1",
+  howpublished = "\url{http://dx.doi.org/10.1038/d41586-022-01692-1}",
+  note         = "Accessed: 2023-7-9",
+  language     = "en",
+  doi          = "10.1038/d41586-022-01692-1"
+}
+
+@ARTICLE{Knuth1984-ot,
+  title     = "Literate Programming",
+  author    = "Knuth, D E",
+  journal   = "Computer Journal",
+  publisher = "Oxford Academic",
+  volume    =  27,
+  number    =  2,
+  pages     = "97--111",
+  month     =  jan,
+  year      =  1984,
+  url       = "https://academic.oup.com/comjnl/article-abstract/27/2/97/343244",
+  language  = "en",
+  issn      = "0010-4620",
+  doi       = "10.1093/comjnl/27.2.97"
+}
+
+
+@MISC{knuth_undated-mi,
+  author      = "Knuth, D E",
+  title        = "Literate Programming",
+  url          = "https://www-cs-faculty.stanford.edu/~knuth/lp.html",
+  howpublished = "\url{https://www-cs-faculty.stanford.edu/~knuth/lp.html}",
+  note         = "Accessed: 2023-7-26"
+}
 
 @ARTICLE{Shaqiri2018-ys,
   title     = "Sex-related differences in vision are heterogeneous",
